[workspace]
members = [
  'twilio-oai-accounts-v1',
  'twilio-oai-api-v2010',
  'twilio-oai-autopilot-v1',
  'twilio-oai-bulkexports-v1',
  'twilio-oai-chat-v1',
  'twilio-oai-chat-v2',
  'twilio-oai-conversations-v1',
  'twilio-oai-events-v1',
  'twilio-oai-fax-v1',
  'twilio-oai-flex-v1',
  'twilio-oai-frontline-v1',
  'twilio-oai-insights-v1',
  'twilio-oai-ip-messaging-v1',
  'twilio-oai-ip-messaging-v2',
  'twilio-oai-lookups-v1',
  'twilio-oai-messaging-v1',
  'twilio-oai-monitor-v1',
  'twilio-oai-notify-v1',
  'twilio-oai-numbers-v2',
  'twilio-oai-pricing-v1',
  'twilio-oai-pricing-v2',
  'twilio-oai-proxy-v1',
  'twilio-oai-serverless-v1',
  'twilio-oai-studio-v1',
  'twilio-oai-studio-v2',
  'twilio-oai-supersim-v1',
  'twilio-oai-sync-v1',
  'twilio-oai-taskrouter-v1',
  'twilio-oai-trunking-v1',
  'twilio-oai-trusthub-v1',
  'twilio-oai-verify-v2',
  'twilio-oai-video-v1',
  'twilio-oai-voice-v1',
  'twilio-oai-wireless-v1',
]
